[package]
name = "self-update"
version = "1.7.7"
authors = ["Near Inc <hello@near.org>"]
edition = "2021"
repository = { workspace = true}

[lib]
crate-type = ["cdylib"]

# template: https://github.com/SourceScan/cargo-near-image/tree/0.6.0-near
# => 
# https://github.com/dj8yfo/cargo-near-image/tree/0.x.x-builer-local-cargo-near


[package.metadata.near.reproducible_build]
image = "dj8yfo/sourcescan:0.x.x-dev-cargo-near-build-cmd-repo"
image_digest = "sha256:6d4f090a8bb606bbddf396809d31b6c96a45d0bdd3e93d9e4bf538ff463246e9"
container_build_command = "cargo near build --no-release --no-doc"
source_code_git_url = "https://github.com/dj8yfo/sample_workspace.git"

[dependencies]
near-sdk = { version = "5.1.0", features = ["legacy"], git = "https://github.com/dj8yfo/near-sdk-rs.git", branch = "add_contract_metadata" }

[dev-dependencies]
near-sdk = { version = "5.1.0", features = ["legacy"], git = "https://github.com/dj8yfo/near-sdk-rs.git", branch = "add_contract_metadata" }
near-workspaces = { version = "0.10.0", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"
rstest = "0.18.2"
